# EToH

./: .gitignore  .websiteignore  README.md  annoying_links.json  area_info.json  badge_map.json  badges.json  bun_watch.sh  changelog.md  eslint.config.mjs  etoh.js  fetch_badges.py  ignored.jsonc  index.html  info.html  jest.config.js  mappings.json  me.json  other_data.json  other_data_schema.json  overwrite.json  overwrite.jsonc  package.json  pnpm-lock.yaml  readme.md  shrunk.json  style.css  tds.json  test.html  tests.html  tower_data.json  tower_data_schema.json  tsconfig.json
BadgeChecker/: Cargo.toml  Checker  build.sh
BadgeUpdater/: .env  Cargo.toml  typos.toml
BadgeUpdater/families/: etoh_family.py
BadgeUpdater/src/: badge_to_wikitext.rs  cache.rs  definitions.rs  hard_coded.rs  json.rs  main.rs  mediawiki_api.rs  parse_wikitext.rs  process_items.rs  pywiki.rs  reqwest_client.rs  rust_wiki.rs  shrink_json_defs.rs  wiki.py  wiki_api.rs
BadgeUpdater/src/wikitext/: argument.rs  enums.rs  errors.rs  mod.rs  parsed_data.rs  parser.rs  parts.rs  spec.md  wiki_text.rs
BadgeUpdater/src/wikitext/types/: links.rs  table.rs  templates.rs
Scripts/: AreaManager.ts  BadgeManager.ts  Etoh.ts  EtohUI.ts  GenericManager.ts  console.ts  constants.ts  debug.ts  index.ts  inital.ts  initial.ts  listeners.ts  logs.ts  network.ts  search.ts  search_template.js  search_template_test.html  storage.js  ui.ts  ui_test.ts  user.ts  utils.ts  verbose.js  verbose.mjs
css/: category_tables.css  difficulties.css  infostyle.css  shadow_tables.css  style.css  tables.css  tailwind.css
data/: badges.json  fetch_badges.py  notes.md  old_badges.json  other_data.json  other_data_schema.json  (+2 more)
js/: ui.js  (+8 more)
(+81 files in other folders)
