[package]
name = "badge_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = "0.27.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
url = "2.5.4"
chrono = "0.4"
rayon = "1.11.0"
log = "0.4.28"
env_logger = "0.11.8"
lazy-regex = "3.4.2"
derive_builder = "0.20.2"
dotenv = "0.15.0"
