[package]
name = "badge_updater"
version = "0.2.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "rkyv-16"] }
log = "0.4.28"
env_logger = "0.11.8"
lazy-regex = "3.4.2"
derive_builder = "0.20.2"
dotenv = "0.15.0"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
async-recursion = "1.1.1"
itertools = "0.14.0"
