[package]
name = "badge_updater"
version = "0.2.1"
edition = "2024"

[dependencies]
regex = "1.12"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "rkyv-16"] }
log = "0.4"
env_logger = "0.11.8"
lazy-regex = "3.5"
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
itertools = "0.14.0"
